# ChangeLog for media-gfx/gimp
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.188 2007/04/28 16:01:36 armin76 Exp $

  28 Apr 2007; Raúl Porcel <armin76@gentoo.org> gimp-2.2.14.ebuild:
  ia64 + x86 wrt security bug 176226

*gimp-2.3.16 (28 Apr 2007)
*gimp-2.2.14 (28 Apr 2007)

  28 Apr 2007; Hanno Boeck <hanno@gentoo.org> -files/gimp.desktop,
  +files/gimp-sunras-bufferoverflow.diff, +gimp-2.2.14.ebuild,
  +gimp-2.3.16.ebuild, gimp-9999.ebuild:
  Bump with security fix for sunras plugin.

  21 Apr 2007; Hanno Boeck <hanno@gentoo.org> gimp-9999.ebuild:
  Change live ebuild from cvs to svn.

*gimp-2.3.15 (02 Apr 2007)

  02 Apr 2007; Hanno Boeck <hanno@gentoo.org> +gimp-2.3.15.ebuild:
  Version bump.

  16 Feb 2007; Alexander H. Færøy <eroyf@gentoo.org> metadata.xml:
  Removed allanonjl from metadata.xml

  01 Feb 2007; Hanno Boeck <hanno@gentoo.org> gimp-2.3.14.ebuild:
  Fix dep on glib, needs more current version.

*gimp-2.3.14 (24 Jan 2007)

  24 Jan 2007; Hanno Boeck <hanno@gentoo.org> +gimp-2.3.14.ebuild:
  Version bump.

*gimp-2.3.13 (04 Dec 2006)

  04 Dec 2006; Hanno Boeck <hanno@gentoo.org> +gimp-2.3.13.ebuild:
  Version bump.

  21 Oct 2006; Stefan Schweizer <genstef@gentoo.org> gimp-2.3.12.ebuild:
  Fix build by unsetting AA like in 2.3.11, bug 151946

*gimp-2.3.12 (19 Oct 2006)

  19 Oct 2006; Hanno Boeck <hanno@gentoo.org> +gimp-2.3.12.ebuild:
  Version bump, no more versioned bins (we no longer have gimp-1.x), cleanup.

*gimp-2.3.11 (12 Sep 2006)

  12 Sep 2006; Hanno Boeck <hanno@gentoo.org> metadata.xml,
  +gimp-2.3.11.ebuild:
  Version bump and add myself to maintainers.

  10 Sep 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove brix from metadata.xml.

  08 Sep 2006; Thomas Cort <tcort@gentoo.org> gimp-2.2.12.ebuild:
  Stable on alpha.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> gimp-2.3.9.ebuild,
  gimp-2.3.10.ebuild: