@@ -1,6 +1,10 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.188 2007/04/28 16:01:36 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.189 2007/04/28 17:48:17 hanno Exp $
+
+  28 Apr 2007; Hanno Boeck <hanno@gentoo.org> gimp-2.3.16.ebuild,
+  gimp-9999.ebuild:
+  Raise some dependencies, mask in all 2.4 profiles and remove mips keyword.
 
   28 Apr 2007; Raúl Porcel <armin76@gentoo.org> gimp-2.2.14.ebuild:
   ia64 + x86 wrt security bug 176226
